--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-VITE_API_USUARIO=http://localhost:3004/usuarios
-VITE_API_RECETA=http://localhost:3004/recetas
+# VITE_API_USUARIO=http://localhost:3004/usuarios
+VITE_API_USUARIO=http://localhost:4000/apireceta/auth
+VITE_API_USUARIONUEVO=http://localhost:4000/apireceta/auth/nuevo
+VITE_API_RECETA=http://localhost:4000/apireceta/receta
+# VITE_API_RECETA=http://localhost:3004/recetas
